mouseReleaseEvent(): Temporarily disallow ListPopupMenu for m_pObject types other than Uml::ot_Association until somebody finds time to implement that. Implementation would require certain controls in AssocPropDlg to be made read-only for non-ot_Association types of m_pObject.

BUG:147202

svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=680735